--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração </li>
+        <li>Integração continua </li>
     </ul>
 </body>
 </html>
