--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura remodelados </title>
+    <title>Cursos da Alura remodelados e faceis </title>
 </head>
 <body>
     <ul>
