mudei a lista novamente

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker e cursos refeitos</li>
         <li>Ansible</li>
         <li>Integração continua</li>
         <li>github</li>
