munado o nome do git hub

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
         <li>Docker e cursos refeitos</li>
         <li>Ansible</li>
         <li>Integração continua</li>
-        <li>github</li>
+        <li>github mais atualizado</li>
 
     </ul>
 </body>
